<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Où qu\'on mange</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_username">Username</string>
    <string name="login_action">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_titleOfCommunity">This Title is invalid</string>
    <string name="error_invalid_password">This password is too short (min. 6 &amp; max. 20 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_different_password">Passwords are differents</string>
    <string name="error_regex_password">This password is too short (min. 6 &amp; max. 20 characters)</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="logout">Logout</string>
    <string name="create_community">Create Community</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="communities">Communities</string>
    <string name="search_communities">Search Communities</string>
    <string name="signup_action">Sign up</string>
    <string name="signup">Create Account</string>
    <string name="drower_open">Open</string>
    <string name="drower_close">Close</string>
    <string name="event_name">Name</string>
    <string name="event_description">Description</string>
    <string name="create_event">Create event</string>
    <string name="events">Events</string>
    <string name="parameters">Parameters</string>
    <string name="end_date_day">End Day</string>
    <string name="start_date_day">Start Day</string>
    <string name="start_date_time">Start Time</string>
    <string name="end_date_time">End Time</string>
    <string name="my_communities">My Communities</string>
    <string name="join_group">Join</string>
    <string name="app_label">Search</string>
    <string name="search_hint">Search</string>
    <string name="community_join">Join</string>
    <string name="quit_group">Quit</string>
    <string name="image_descr">Image</string>
    <string name="more_infos">More Infos</string>
    <string name="error_invalid_date">The date invalide</string>
    <string name="vote_group">Vote</string>
    <string name="unvote_group">Unvote</string>
    <string name="default_community">Default Community </string>
    <string name="create_event_error_validation">Invalid Event</string>
    <string name="close">Close</string>
    <string name="error_start_date_in_the_past">You can not create an event in the past</string>
    <string name="error_end_date_in_the_past">The event does not finish in the past</string>
    <string name="error_end_date_prior_start">The end date must be superior to the start date</string>
    <string name="no_internet">No internet connection!</string>
    <string name="event_created">Event Created</string>
    <string name="error_login">Error in login</string>
    <string name="login_error_connect">Error ! Try again.</string>
    <string name="error_signin">Error in signin</string>
    <string name="community_created">Community Created</string>
    <string name="error_invalid_fields">invalid fields</string>
    <string name="error_exception">Error ! Try again</string>
    <string name="member_join_community">You joined.</string>
    <string name="map_not_ready">Map not ready</string>
    <string name="logout_confirm_message">Are you sure you want to logout?</string>
    <string name="yes_message">Yes</string>
    <string name="no_message">No</string>
    <string name="not_connection">No network available!</string>
    <string name="refresh">Refresh</string>
    <string name="activate">activate</string>
    <string name="setting_mobile_data_confirm_title">Data mobile setting</string>
    <string name="setting_info">Info</string>
    <string name="message_internet_not_available">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="activate_wifi_message">Wifi</string>
    <string name="activate_data_mobile_message">Data mobile</string>
    <string name="cancel_message">Cancel</string>
    <string name="setting_connection_confirm_message">Internet not available, Cross check your internet connectivity and try again</string>
    <string name="setting_wifi_confirm_title">Wifi Settings</string>
    <string name="settings">Settings</string>
    <string name="google_play_service_licence">Google Play Service Licence</string>
    <string name="notifications">Notifications</string>
    <string name="preference_notification_description">Disable all notifications</string>
    <string name="key_notifications_enabled">KEY_NOTIFICATIONS_ENABLED</string>
    <string name="login_error">Email or password invalid</string>
    <string name="create_community_error_already_exist">Community Already Exist</string>
    <string name="error_already_join">You have already join this community</string>
    <string name="signup_error_already_exist">Already exist</string>
    <string name="community_type">Type</string>
    <string name="community_members">Members</string>
    <string name="accept">Accept</string>
    <string name="error_different_number_of_hours_between_dates">The period between the two dates shall not exceed 12 hours.</string>
    <string name="error_invalid_titleOfCommunity_length">This Title is invalid (between 2 and 30 characters)</string>
    <string name="default_12h_event_name">Lunchtime</string>
    <string name="default_12h_event_description">Everybody need eat</string>
    <string name="list_empty">This list is empty</string>
    <string name="refuse">Refuse</string>
    <string name="interest_point_search_error_no_location">Activate Location</string>
    <string name="map_target">Target</string>
    <string name="conflict_error">This action has already been performed.</string>
    <string name="error_technical">Technical error</string>
    <string name="quit_community">Quit Community</string>
    <string name="interest_point_photo">Interest Point Photo</string>
    <string name="group_members">Group Members</string>
    <string name="title_signin_google_plus">Sign in with</string>

    <string-array name="community_types">
        <item>Public</item>
        <item>Private</item>
        <!-- <item>Closed</item> -->
    </string-array>

    <plurals name="groups">
        <item quantity="one">%d group</item>
        <item quantity="other">%d groups</item>
    </plurals>

    <plurals name="votes">
        <item quantity="one">%d vote</item>
        <item quantity="other">%d votes</item>
    </plurals>

    
</resources>
