<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_event_black"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_group_black"
            android:title="@string/communities" />
        <item
            android:id="@+id/nav_search_communities"
            android:icon="@drawable/ic_group_add_black"
            android:title="@string/search_communities" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
