<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/community_member_cardview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    card_view:cardElevation="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/member_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:layout_marginLeft="3dp"
            android:layout_marginStart="3dp"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/accept_member_action"
            android:text="@string/accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            style="@style/acceptButton"
            android:layout_below="@id/member_username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:id="@+id/delete_member_action"
            android:text="@string/refuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            style="@style/deleteButton"
            android:layout_below="@id/member_username"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>
