<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/community_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardElevation="2dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/community_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/community_description"
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_below="@+id/community_name"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"/>

            <TextView
                android:id="@+id/community_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/community_type"
                android:textColor="@color/primaryTextColor"
                android:padding="4dp"
                android:background="@drawable/green_badge"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" />

            <Button
                android:id="@+id/community_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/primaryTextColor"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/community_join"
                android:layout_below="@+id/community_description"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
