<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/interest_point_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:foreground="?android:attr/selectableItemBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/interest_point_name"
                android:maxLines="1"
                android:text="@string/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/interest_point_address"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_below="@id/interest_point_name"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/interest_point_groups_number"
                android:textColor="@color/primaryTextColor"
                android:background="@drawable/green_badge"
                android:padding="3dp"
                android:layout_below="@id/interest_point_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/interest_point_votes_number"
                android:textColor="@color/primaryTextColor"
                android:background="@drawable/blue_badge"
                android:padding="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/interest_point_address"
                android:layout_toRightOf="@+id/interest_point_groups_number"
                android:layout_toEndOf="@+id/interest_point_groups_number" />

            <Button
                android:id="@+id/action_join_group"
                android:text="@string/join_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_alignTop="@+id/action_details"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/action_vote_group"
                android:text="@string/vote_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/interest_point_votes_number"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/action_details"
                android:text="@string/more_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_below="@+id/interest_point_votes_number"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>