<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.oqom.ouquonmange.CreateEventActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="fr.oqom.ouquonmange.CreateEventActivity"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_event_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_event_day_start"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_event_day_date_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date_day"
                        android:inputType="datetime"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_event_date_start"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_event_date_start"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/start_date_time"
                        android:inputType="datetime"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_event_day_end"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_event_day_date_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_date_day"
                        android:inputType="datetime"
                        android:focusable="false"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_event_date_end"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_event_date_end"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_date_time"
                        android:inputType="datetime"
                        android:focusable="false"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/action_create_event"
                    android:text="@string/save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center" />

         </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>